--- a/common/header.html
+++ b/common/header.html
@@ -21,7 +21,7 @@
   $(function() {
     $('.ham_btn').on('click', function() {
       $(this).toggleClass('open');
-      // $('.mo_menu').toggleClass('open');
+      $('.header').toggleClass('open');
     });
   });
 </script>
