--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="inner main_wrap">
       <h2 class="title">차별화된 결제시스템</h2>
       <h3 class="sub_title">31SYSTEM</h3>
-      <a href="#" class="que_btn">문의하기<i class="xi-angle-right"></i></a>
+      <a href="/page/contact.html" class="que_btn">문의하기<i class="xi-angle-right"></i></a>
     </div>
   </main>
 
@@ -81,7 +81,7 @@
     <article class="link_wrap show-on-scroll">
       <ul>
         <li>
-          <a href="info.html">
+          <a href="page/info.html">
             <div class="link_box item1">
               <h5>고객의 곁에서 늘 가까이 함께하는 삼일시스템</h5>
               <p>
@@ -92,7 +92,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="page/business.html">
             <div class="link_box item2">
               <h5>차별화된 결제시스템, PLUSPAY</h5>
               <p>
@@ -103,7 +103,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="page/contact.html">
             <div class="link_box item3">
               <h5>제휴문의</h5>
               <p>
@@ -114,7 +114,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="page/notice.html">
             <div class="link_box item4">
               <h5>공지사항</h5>
               <p>
