--- a/business.html
+++ b/business.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="유사투자 소비자 피해구제 센터" />
   <meta property="og:description" content="안녕하세요 주식회사 삼일시스템입니다." />
   <meta property="og:url" content="#" />
-  <meta property="og:image" content="../images/kakao_img.png" />
+  <meta property="og:image" content="./images/kakao_img.png" />
   <meta property="og:image:width" content="800" />
   <meta property="og:image:height" content="400" />
 
@@ -26,22 +26,22 @@
   <meta name="twitter:title" content="주식회사 삼일시스템입니다." />
   <meta name="twitter:description" content="안녕하세요 주식회사 삼일시스템입니다." />
   <meta name="twitter:url" content="#" />
-  <meta name="twitter:image" content="../images/kakao_img.png" />
+  <meta name="twitter:image" content="./images/kakao_img.png" />
 
   <!-- Faivicon -->
-  <link rel="icon" type="image/png" href="../images/favicon.ico">
+  <link rel="icon" type="image/png" href="./images/favicon.ico">
 
   <!-- CSS -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/common.css">
-  <link rel="stylesheet" href="../css/business.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/business.css">
 
   <!-- jQuery-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   <!-- Js -->
-  <script src="../js/common.js" defer></script>
+  <script src="./js/common.js" defer></script>
 </head>
 
 <body>
@@ -121,8 +121,8 @@
 
   <script>
     $(function () {
-      $("#header").load("/common/header.html");
-      $("#footer").load("/common/footer.html");
+      $("#header").load("/header.html");
+      $("#footer").load("/footer.html");
     });
   </script>
 </body>
