--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
 <nav class="nav inner">
   <h1 class="logo">
-    <a href="../index.html"><img src="../images/logo.svg" alt="31system"></a>
+    <a href="./index.html"><img src="../images/logo.svg" alt="31system"></a>
   </h1>
   <ul>
-    <li><a href="/page/info.html">회사소개</a></li>
-    <li><a href="/page/business.html">사업영역</a></li>
-    <li><a href="/page/contact.html">제휴문의</a></li>  
-    <li><a href="/page/notice.html">공지사항</a></li>
+    <li><a href="/info.html">회사소개</a></li>
+    <li><a href="/business.html">사업영역</a></li>
+    <li><a href="/contact.html">제휴문의</a></li>  
+    <li><a href="/notice.html">공지사항</a></li>
   </ul>
 
   <!-- hamburger btn -->
