--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,10 @@
 <div class="inner">
   <article class="top_wrap">
     <ul>
-      <li><a href="../page/info.html">회사 소개</a></li>
-      <li><a href="../page/business.html">사업 영역</a></li>
-      <li><a href="../page/contact.html">제휴 문의</a></li>
-      <li><a href="../page/notice.html">공지 사항</a></li>
+      <li><a href="./info.html">회사 소개</a></li>
+      <li><a href="./business.html">사업 영역</a></li>
+      <li><a href="./contact.html">제휴 문의</a></li>
+      <li><a href="./notice.html">공지 사항</a></li>
     </ul>
     <a href="javascript:void()" class="top_btn">TOP<i class="xi-angle-up"></i></a>
   </article>
@@ -35,7 +35,7 @@
     </div>
     <div class="logo_wrap">
       <a href="http://www.31pluspay.com/" target="blank"><img src="/images/pluspay_logo.png" alt="pluspay"></a>
-      <a href="../index.html" target="blank"><img src="/images/footer_logo.png" alt="31system"></a>
+      <a href="index.html" target="blank"><img src="/images/footer_logo.png" alt="31system"></a>
     </div>
   </article>
 </div>
