--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="유사투자 소비자 피해구제 센터" />
   <meta property="og:description" content="안녕하세요 주식회사 삼일시스템입니다." />
   <meta property="og:url" content="#" />
-  <meta property="og:image" content="../images/kakao_img.png" />
+  <meta property="og:image" content="./images/kakao_img.png" />
   <meta property="og:image:width" content="800" />
   <meta property="og:image:height" content="400" />
 
@@ -26,22 +26,22 @@
   <meta name="twitter:title" content="주식회사 삼일시스템입니다." />
   <meta name="twitter:description" content="안녕하세요 주식회사 삼일시스템입니다." />
   <meta name="twitter:url" content="#" />
-  <meta name="twitter:image" content="../images/kakao_img.png" />
+  <meta name="twitter:image" content="./images/kakao_img.png" />
 
   <!-- Faivicon -->
-  <link rel="icon" type="image/png" href="../images/favicon.ico">
+  <link rel="icon" type="image/png" href="./images/favicon.ico">
 
   <!-- CSS -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/common.css">
-  <link rel="stylesheet" href="../css/info.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/info.css">
 
   <!-- jQuery-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   <!-- Js -->
-  <script src="../js/common.js" defer></script>
+  <script src="./js/common.js" defer></script>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
   <!-- CEO -->
   <article class="container ceo_greeting section">
     <div class="inner ceo_wrap">
-      <img src="../images/info_img1.png" alt="">
+      <img src="./images/info_img1.png" alt="">
       <div class="ceo_content">
         <div class="ceo_text">
           <p>
@@ -94,7 +94,7 @@
             <span>김경선</span>
           </p>
           <div class="sign_img">
-            <img src="../images/sign.png" alt="사인">
+            <img src="./images/sign.png" alt="사인">
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
       <div class="content">
         <article class="list_wrap">
           <div class="img_wrap">
-            <img src="../images/info_img2.png" alt="웹/앱 개발">
+            <img src="./images/info_img2.png" alt="웹/앱 개발">
           </div>
           <h4>웹 / 앱 개발</h4>
           <p>
@@ -122,7 +122,7 @@
         </article>
         <article class="list_wrap">
           <div class="img_wrap">
-            <img src="../images/info_img3.png" alt="소프트웨어 개발">
+            <img src="./images/info_img3.png" alt="소프트웨어 개발">
           </div>
           <h4>소프트웨어 개발</h4>
           <p>
@@ -136,7 +136,7 @@
         </article>
         <article class="list_wrap">
           <div class="img_wrap">
-            <img src="../images/info_img4.png" alt="운영 유지보수">
+            <img src="./images/info_img4.png" alt="운영 유지보수">
           </div>
           <h4>운영 유지보수</h4>
           <p>
@@ -159,7 +159,7 @@
       <div class="content">
         <article class="item_wrap">
           <div class="icon_wrap">
-            <img src="../images/icon1.png" alt="고객중심">
+            <img src="./images/icon1.png" alt="고객중심">
           </div>
           <h5>고객중심</h5>
           <p>삼일시스템은 고객과 늘 가까이 함께하며 고객을 최우선으로 생각합니다.</p>
@@ -168,7 +168,7 @@
         </article>
         <article class="item_wrap">
           <div class="icon_wrap">
-            <img src="../images/icon2.png" alt="자유로운 소통">
+            <img src="./images/icon2.png" alt="자유로운 소통">
           </div>
           <h5>자유로운 소통</h5>
           <p>서로가 의지하며 조직문화의 미래를 함께 그려나가겠습니다.</p>
@@ -177,7 +177,7 @@
         </article>
         <article class="item_wrap">
           <div class="icon_wrap">
-            <img src="../images/icon3.png" alt="창조적인 기술">
+            <img src="./images/icon3.png" alt="창조적인 기술">
           </div>
           <h5>창조적인 기술</h5>
           <p>최고의 기술을 기반으로 창조적이면서도 안정적인 서비스를 제공합니다.</p>
@@ -185,7 +185,7 @@
         </article>
         <article class="item_wrap">
           <div class="icon_wrap">
-            <img src="../images/icon4.png" alt="협력적 기업 문화">
+            <img src="./images/icon4.png" alt="협력적 기업 문화">
           </div>
           <h5>협력적 기업 문화</h5>
           <p>수평적인 관계에서도 체계적이면서 안정적인 팀워크를 자랑합니다.</p>
@@ -193,7 +193,7 @@
         </article>
         <article class="item_wrap">
           <div class="icon_wrap">
-            <img src="../images/icon5.png" alt="연구와 개발">
+            <img src="./images/icon5.png" alt="연구와 개발">
           </div>
           <h5>연구와 개발</h5>
           <p>끊임없는 도전과 열정으로 차별화된 시스템을 만들기 위해 노력합니다.</p>
@@ -201,7 +201,7 @@
         </article>
         <article class="item_wrap">
           <div class="icon_wrap">
-            <img src="../images/icon6.png" alt="상호존중">
+            <img src="./images/icon6.png" alt="상호존중">
           </div>
           <h5>상호존중</h5>
           <p>상호존중과 신뢰를 바탕으로 인재존중의 기업문화를 만들어 갑니다.</p>
@@ -218,8 +218,8 @@
 
   <script>
     $(function () {
-      $("#header").load("/common/header.html");
-      $("#footer").load("/common/footer.html");
+      $("#header").load("/header.html");
+      $("#footer").load("/footer.html");
     });
   </script>
 </body>
