--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
   <script>
     $(function () {
-      $("#header").load("/header.html");
-      $("#footer").load("/footer.html");
+      $("#header").load("./header.html");
+      $("#footer").load("./footer.html");
     });
   </script>
 </body>
