--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <nav class="nav inner">
   <h1 class="logo">
-    <a href="./index.html"><img src="../images/logo.svg" alt="31system"></a>
+    <a href="./index.html"><img src="./images/logo.svg" alt="31system"></a>
   </h1>
   <ul>
     <li><a href="/info.html">회사소개</a></li>
