--- a/footer.html
+++ b/footer.html
@@ -34,8 +34,8 @@
       <p>Copyright ⓒ 2021 주식회사 삼일시스템 CO., LTD. All right reserved.</p>
     </div>
     <div class="logo_wrap">
-      <a href="http://www.31pluspay.com/" target="blank"><img src="/images/pluspay_logo.png" alt="pluspay"></a>
-      <a href="index.html" target="blank"><img src="/images/footer_logo.png" alt="31system"></a>
+      <a href="http://www.31pluspay.com/" target="blank"><img src="./images/pluspay_logo.png" alt="pluspay"></a>
+      <a href="index.html" target="blank"><img src="./images/footer_logo.png" alt="31system"></a>
     </div>
   </article>
 </div>
