--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="유사투자 소비자 피해구제 센터" />
   <meta property="og:description" content="안녕하세요 주식회사 삼일시스템입니다." />
   <meta property="og:url" content="samilsystem.com" />
-  <meta property="og:image" content="/images/kakao_img.png" />
+  <meta property="og:image" content="./images/kakao_img.png" />
   <meta property="og:image:width" content="800" />
   <meta property="og:image:height" content="400" />
 
@@ -26,7 +26,7 @@
   <meta name="twitter:title" content="주식회사 삼일시스템입니다." />
   <meta name="twitter:description" content="안녕하세요 주식회사 삼일시스템입니다." />
   <meta name="twitter:url" content="samilsystem.com" />
-  <meta name="twitter:image" content="/images/kakao_img.png" />
+  <meta name="twitter:image" content="./images/kakao_img.png" />
 
   <!-- Faivicon -->
   <link rel="icon" type="image/png" href="/images/favicon.ico">
@@ -77,7 +77,7 @@
         </p>
       </div>
       <div class="img_wrap">
-        <img src="../images/phone_img.png" alt="31system">
+        <img src="./images/phone_img.png" alt="31system">
       </div>
     </div>
   </article>
@@ -158,8 +158,8 @@
 
   <script>
     $(function () {
-      $("#header").load("../common/header.html");
-      $("#footer").load("../common/footer.html");
+      $("#header").load("/header.html");
+      $("#footer").load("/footer.html");
     });
   </script>
 </body>
